# gamepad-rs

./: CHANGELOG.md  Cargo.toml  README.md
examples/: test.rs
src/: lib.rs
src/platform/: mod.rs
src/platform/linux/: mod.rs
src/platform/macos/: mod.rs
src/platform/windows/: mod.rs
