[package]
name = "gamepad-rs"
version = "0.1.0"
authors = ["jice <jice.nospam@gmail.com>"]
keywords = ["gamepad", "joystick", "input"]

[dependencies]
lazy_static = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
libudev-sys = "0.1"
libc = "0.2"
nix = "0.10.0"


[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.4", features = ["winerror", "xinput"] }